Fix spacing

--- a/app/assets/stylesheets/home/dataset_list.sass
+++ b/app/assets/stylesheets/home/dataset_list.sass
@@ -91,7 +91,7 @@
     bottom: .35em
 
   .categories
-    max-width: 15.7em
+    max-width: 15.5em
     vertical-align: middle
 
 .dataset-info
